@@ -13,23 +13,19 @@ DEBFILES = debian/README.Debian debian/changelog debian/control \
 	debian/shlibdeps.sh debian/libxine-dev.install debian/libxine1.install
 
 EXTRA_DIST = config.rpath autogen.sh \
-	     ChangeLog \
 	     configure \
 	     config.guess \
 	     config.sub \
-	     COPYING \
 	     INSTALL \
 	     install-sh \
 	     libtool \
 	     ltmain.sh \
 	     missing \
-	     NEWS \
-	     README \
-	     TODO \
-	     depcomp \
-	     CREDITS
+	     depcomp
 
 CONFIG_CLEAN_FILES = libtool
+
+dist_doc_DATA = COPYING NEWS README TODO CREDITS ChangeLog
 
 docs:
 	@cd doc && $(MAKE) $@
