@@ -264,7 +264,12 @@ Text subtitle files may be appended to the MRL:.
 .TP
 .BI <mrl>#subtitle:<subtitlefile>
 This is the normal way to define the subtitle file to use. The frontend will
-not take any notice of the subtitle file.
+not take any notice of the subtitle file. For example:
+.br
+.I file://home/user/wibble.mpg#subtitles:/home/user/wibble.sub
+.br
+(Note that some front ends can detect subtitles files where the name differs
+as shown in the example.)
 .br
 .SH STREAM OPTIONS
 .br
